--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -3,8 +3,8 @@ name: Backup Bangumi Data
 on:
   # 注释：如果要定时执行，请解除以下部分的注释（删除掉行首的 # 即可）
   # ----- 解除这行之后的注释（不包括这行）-----
-  # schedule:
-  #   - cron: "0 4 * * 1"  # 运行时间：每周一凌晨四点
+   schedule:
+     - cron: "0 8 * * 1"  # 运行时间：每周一凌晨四点
   # ----- 解除这行之前的注释（不包括这行）-----
   workflow_dispatch:  # 也支持手动触发
 
